--- a/docs/2023/20230707_sdei.md
+++ b/docs/2023/20230707_sdei.md
@@ -47,7 +47,7 @@ Client通过SMC或者HVC进行SDEI调用，调用规范依赖于SMC Calling Conv
 - SDEI_EVENT_DISABLE
 - SDEI_EVENT_CONTEXT
 - SDEI_EVENT_COMPLETE
-- SDEI_EVENT_SIGNAL 可以向目标PE发送一个0 号event，参数为affinity
+- SDEI_EVENT_SIGNAL 可以向目标PE发送一个0 号event，参数为affinity,作为私有事件
 - SDEI_INTERRUPT_BIND 可以将一个PPI或者SPI绑定到一个event id 上，不能绑定SGI,PPI将作为私有事件，SPI为共享事件。
 ....
 
