update run nginx doc

--- a/docs/2023/20231128_nginx_run.md
+++ b/docs/2023/20231128_nginx_run.md
@@ -4,11 +4,9 @@
 
 ```shell
 //首先要确保机器中有musl libc,可以运行rukos的c程序，具体可以参考rukos的README中运行c程序的部分
-cd apps/c/nginx
-./create_nginx_img.sh
-cd ..
-cd ..
-cd ..
+git clone https://github.com/syswonder/syswonder-web.git
+mkdir -p apps/c/nginx/html
+cp -r syswonder-web/docs/* apps/c/nginx/html
 make A=apps/c/nginx/ LOG=info NET=y BLK=y V9P=y V9P_PATH=/home/oslab/Desktop/rukos/apps/c/nginx/html/  ARCH=aarch64 SMP=4 ARGS="./nginx_app" MUSL=y run
 ```
 
@@ -111,7 +109,9 @@ http {
 
 ## 网页文件：
 
-需要确保nginx.conf中设置的网页文件的位置正确，比如在上面的conf中，需要保证文件/v9fs/index index.html存在才能访问到主页。其余的文件只需要按照index.html的内容在本文件夹下放到应有的位置。
+需要确保nginx.conf中设置的网页文件的位置正确，比如在上面的conf中，需要保证文件/v9fs/index.html存在才能访问到主页。其余的文件只需要按照index.html的内容在本文件夹下放到应有的位置。
+
+运行前可以将网页复制到apps/c/nginx/html/文件夹下，并将主目录下的disk.img删除，这样程序在运行时会自动新建一个磁盘并将html文件夹下的文件复制到磁盘中
 
 ## 运行命令：
 
