--- a/docs/2024/20241226_linux_ccf.md
+++ b/docs/2024/20241226_linux_ccf.md
@@ -429,7 +429,11 @@ CCF子系统向provider、consumer提供的接口，大致分为：
 
 6. composite clock
 
-聚合时钟，是mux、divider、gate等clock的组合
+聚合时钟，是mux、divider、gate等clock的组合，因此既可以选择父时钟，也可以调节频率比，也可以控制开关，然而这是一个时钟，同一时刻只有一个输出时钟信号。
+
+7. pll clock
+
+对于NXP，除了上面六种时钟，还有pll时钟位于CCF，可以调整频率，有几个可选择的频率。
 
 ## provider和consumer在设备树中的体现
 
@@ -519,7 +523,7 @@ __set_clk_parents
 
 __set_clk_rates
 
-通过上面这两个函数，完成时钟频率和父时钟的设置。
+通过上面这两个函数，完成时钟频率和父时钟的设置。由于这3个时钟可以设置父时钟和频率，因此是composite clk。
 
 ## nxp案例说明
 
