asr update and vjepa2

--- a/docs/2025/20251230_ASR_GRPC.md
+++ b/docs/2025/20251230_ASR_GRPC.md
@@ -128,8 +128,8 @@ docker run -it --rm \
 
 ### 7.下一步说明
 
-- 尝试 [**Riva** **ASR** **API**](https://github.com/nvidia-riva/tutorials/tree/stable) **，**后续满足复杂需求 **，**作为一个ASR模块和其他模块进行连接 
-- 尝试使用 [**NeMo框架**](https://docs.nvidia.com/deeplearning/riva/user-guide/docs/tutorials/asr-deploy-am-and-ngram-lm.htm) 部署一个使用 **NeMo 训练的** **ASR** **语言模型 ，NeMo框架提供从训练、部署、微调**预训练模型（允许自定义数据集）
+- 尝试 [**Riva** **ASR** **API**](https://github.com/nvidia-riva/tutorials/tree/stable) ，后续满足复杂需求 ，作为一个ASR模块和其他模块进行连接 
+- 尝试使用 [**NeMo框架**](https://docs.nvidia.com/deeplearning/riva/user-guide/docs/tutorials/asr-deploy-am-and-ngram-lm.htm) 部署一个使用 NeMo 训练的ASR语言模型 ，NeMo框架提供从训练、部署、微调预训练模型（允许自定义数据集）
   - **使用 NeMo 训练或加载模型**：可选择预训练模型（如 Conformer-CTC）或从零开始训练。
   - **部署模型**：按照 [官方文档](https://docs.nvidia.com/deeplearning/riva/user-guide/docs/tutorials/asr-deploy-am-and-ngram-lm.html) ，将 NeMo 模型导出成 `.riva` 格式，放入 Riva 服务中。
   - **测试部署效果**：使用 Riva API 验证部署后的 NeMo 模型是否能正常推理。
@@ -145,7 +145,7 @@ docker run -it --rm \
 
 除了语音识别外，还有llm问答，tts语音合成输出，官方提供了docker和简单文档可以供使用。参考链接https://build.nvidia.com/explore/speech
 
-1. 输入可以通过**浏览器麦克风和外部麦克风，**统一由 Audio Input 模块接收**，**通过 gRPC 传送至 RIVA ASR 进行语音识别
+1. 输入可以通过浏览器麦克风和外部麦克风，统一由 Audio Input 模块接收，通过 gRPC 传送至 RIVA ASR 进行语音识别
 2. **RIVA** **ASR** 将音频转录为文字，经由 **gRPC** 发送至 **ASR Transcript**
 3. **LLM** 模块接收 ASR 文本并生成回复
 4. LLM Output 将短语/句子经由 **gRPC** 传给 **RIVA** **TTS** 生成语音
